Move main program code to main.js, update script src in index.html, small style change

--- a/server/index.html
+++ b/server/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" content="width=device-width,initial-scale=1" name="viewport">
         <title>Web Components Sandbox</title>
     <link rel="stylesheet" href="./src/styles/index.css" />
-    <script type="module" src="./src/components/index.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </head>
   <body>
     <div id="sandbox">
